--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Project for CSE 170/COGS 120",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp dev",
+    "test": "npm run test:eslint && npm run test:stylelint",
+    "test:eslint": "eslint gulpfile.js app.js routes/**/*.js",
+    "fix:eslint": "eslint --fix gulpfile.js app.js routes/**/*.js",
+	"test:stylelint": "stylelint scss/**/*.scss",
+	"fix:stylelint": "stylelint scss/**/*.scss --fix"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oysteinsigholt/cogs120-project.git"
   },
   "author": "",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/oysteinsigholt/cogs120-project/issues"
   },
@@ -20,13 +25,21 @@
     "eslint": "^4.9.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.7.0",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "stylelint-order": "^0.8.0",
-    "stylelint-scss": "^2.2.0"
+    "stylelint-scss": "^2.2.0",
+    "tiny-lr": "^1.1.0"
   },
   "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
+    "connect-livereload": "^0.6.0",
+    "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "gulp": "^3.9.1"
   }
 }
