--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "postinstall": "gulp build",
     "dev": "gulp dev",
     "test": "npm run test:eslint && npm run test:stylelint",
-    "test:eslint": "eslint gulpfile.js app.js routes/**/*.js",
-    "fix:eslint": "eslint --fix gulpfile.js app.js routes/**/*.js",
+    "test:eslint": "eslint gulpfile.js app.js routes/**/*.js helpers/**/*.js",
+    "fix:eslint": "eslint --fix gulpfile.js app.js routes/**/*.js helpers/**/*.js",
     "test:stylelint": "stylelint sass/**/*.scss",
     "fix:stylelint": "stylelint sass/**/*.scss --fix"
   },
@@ -33,6 +33,8 @@
     "stylelint-scss": "^2.2.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "cheero": "0.0.1",
     "connect-livereload": "^0.6.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
@@ -43,6 +45,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "materialize-css": "^1.0.0-alpha.3",
-    "tiny-lr": "^1.1.0"
+    "tiny-lr": "^1.1.0",
+    "request": "^2.83.0"
   }
 }
