add build scripts

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Project for CSE 170/COGS 120",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
+    "postinstall": "gulp build",
     "dev": "gulp dev",
     "test": "npm run test:eslint && npm run test:stylelint",
     "test:eslint": "eslint gulpfile.js app.js routes/**/*.js",
