--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "stylelint-order": "^0.8.0",
-    "stylelint-scss": "^2.2.0",
+    "stylelint-scss": "^2.2.0"
   },
   "dependencies": {
     "connect-livereload": "^0.6.0",
@@ -43,6 +43,6 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "materialize-css": "^1.0.0-alpha.3",
-    "tiny-lr": "^1.1.0,
+    "tiny-lr": "^1.1.0"
   }
 }
