--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "connect-livereload": "^0.6.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "gulp": "^3.9.1",
