fix undo and calendar

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "cheero": "0.0.1",
+    "clone": "^2.1.1",
     "connect-ensure-login": "^0.1.1",
     "connect-livereload": "^0.6.0",
     "cookie-parser": "^1.4.3",
