--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "ical-toolkit": "^1.0.9",
+    "ical-toolkit": "github:dlee-nvisia/node-ical-toolkit",
     "jsonfile": "^4.0.0",
     "materialize-css": "^1.0.0-alpha.3",
     "passport": "^0.4.0",
